<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SQLiteLogin</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_settings">Settings</string>
    <string name="action_settings"><item>Sign Out</item></string>
    <string name="action_logout"><item>Logout</item></string>
    <string name="action_settings_was"><item>settings</item></string>
    <string name="title_activity_start">GetFIT</string>
    <string name="title_activity_login2">Login2Activity</string>
    <string name="title_fragenkatalog">.. Dein angepasster Plan!</string>
    <string name="frage_1">1. Wähle dein gewünschtes Ziel</string>
    <string name="frage_2">2. Was macht es dir schwer aktiver zu sein?</string>
    <string name="frage_3">3. Wie viel Erfahrung hast du im Krafttraining?</string>
    <!-- Es ist nicht wichtig welchen Tag er trainieren kann -> nur die Einhaltung der Reihenfolge ist wichtig) -->
    <string name="frage_4">4. Wie oft kannst du in der Woche trainieren?</string>
    <string name="frage_5">5. Wie sind Sie auf GetFIT gekommen?</string>
    <string name="frage_6">6. Was für einen Körpertyp hast du?</string>

    <!-- RADIO BUTTONS VON FRAGENKATALOG -->
    <string name="gewichtsverlust">Gewichtsverlust</string>
    <string name="masseaufbau">Masse und Muskelaufbau – für Schlanke Menschen</string>
    <string name="kondition">Erhöhung der Kondition – Steigerung der Ausdauer</string>
    <string name="ruecken">Rückenstärkung – Kräftigung des Rückens</string>
    <string name="allgemein">körperliche Fitness steigern</string>
    <string name="zeitdruck">Zeitdruck</string>
    <string name="motivation">Mir fehlts an Motivation</string>
    <string name="nichts">Nichts.</string>
    <string name="anfaenger">Keine - Ich bin Anfänger</string>
    <string name="halbprofi">Ein wenig – Ich kenne die Grundübungen und gehe gelegentlich ins Studio</string>
    <string name="profi">Viel – Ich habe viel Erfahrung </string>

    <string name="hintbenutzername"><i>Benutzername</i></string>
    <string name="hintpassword"><i>Passwort</i></string>

    <string name="zwei_mal_training">2x in der Woche</string>
    <string name="drei_mal_training">3x in der Woche</string>
    <string name="vier_mal_training">mehr als 4 mal in der Woche</string>

    <!-- RadioButtons Registrierung -->
    <string name="W">Männlich</string>
    <string name="M">Weiblich</string>

    <!-- Nav Drawer Menu Items -->
    <string-array name="nav_drawer_items">
        <item>Training</item>
        <item>Ernährung</item>
        <item>Kondition</item>
        <item>Übungen</item>
        <item>Lebensmittel</item>
    </string-array>

    <!-- Nav Drawer List Item Icons -->
    <!-- Keep them in order as the titles are in -->
    <array name="nav_drawer_icons">
        <item>@drawable/ic_hantel</item>
        <item>@drawable/ic_ernaehrung</item>
        <item>@drawable/ic_run</item>
        <item>@drawable/ic_exercise</item>
        <item>@drawable/ic_nutrition</item>
    </array>

    <!-- Content Description -->
    <string name="desc_list_item_icon">Item Icon</string>
    <string name="title_activity_goal">GoalActivity</string>
    <string name="title_section1">Lifting</string>
    <string name="title_section2">Cardio</string>
    <string name="title_section3">Nutrition</string>
    <string name="title_activity_progress">ProgressActivity</string>
    <string name="title_activity_seekbar">SeekbarActivity</string>
    <string name="title_activity_help">GetFit - Tutorial</string>
    <string name="title_activity_registrierung_fragenkatalog">Registrierung - Der Fragenkatalog</string>
    <string name="btn_fragen_fertig">Fertig!</string>
    <string name="title_activity_ernaehrung">ErnaehrungActivity</string>
    <string name="title_activity_nutrition">NutritionActivity</string>
    <string name="title_activity_body">BodyActivity</string>
    <string name="register_username">Username:</string>
    <string name="register_password">Password:</string>
    <string name="register_groeße">Größe:</string>
    <string name="register_gender">Geschlecht:</string>
    <string name="register_gewicht">Gewicht:</string>
    <string name="register_email">Email:</string>
    <string name="title_activity_menu_with_fab">MenuWithFABActivity</string>
    <string name="title_activity_body_info">Welche Körpertyp bin ich?</string>
    <string name="title_activity_konditionhelp">Kondition - Hilfestellung</string>

    <string name="title_fragment_ernaehrungtable">ETable</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_nutritiontable">NutritiontableActivity</string>

    <string name="fragezeichen">Hilfe</string>


</resources>